--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ series_note: Ethno-Geographic Reader, No. 2
 subjects:
 - !lcsh 'Indians of North America'
 - !lcc 'E011'
+- GITenberg
 title: American Indians
 url: http://www.gutenberg.org/ebooks/35915
